Fixed broken scrolling within the result field. The error was caused by justify-content, which was used to align the result field input to the bottom of their respective wrapper.

--- a/src/public/styles_base.css
+++ b/src/public/styles_base.css
@@ -71,26 +71,16 @@ input#display {
 .resultBoxWrapper {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     overflow: scroll;
     scrollbar-width: none;
-    /* position: relative;
-    z-index: 100;
-    background: rgb(28,28,28);
-    background: linear-gradient(0deg, rgba(28,28,28,0) 0%, rgba(28,28,28,0) 33%, rgba(28,28,28,1) 42%); */
+    transition: all .4s ease-in-out;
 }
 
-/* .resultBoxWrapper::before {
-    position: absolute;
-    z-index: 100;
-    background: rgb(28,28,28);
-    background: linear-gradient(0deg, rgba(28,28,28,0) 0%, rgba(28,28,28,0) 33%, rgba(28,28,28,1) 42%);
-} */
-
-/* .resultBoxWrapper input {
-    position: relative;
-    z-index: 1;
-} */
+.resultBoxWrapper > * {
+    transition: all .4s ease-in-out;
+    margin-top: auto;
+}
 
 /* Display clear classes */
 
@@ -380,7 +370,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 
 .resultAnimPlay {
     animation-name: resultAppear;
-    animation-duration: .35s;
+    animation-duration: .6s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
 }
